--- a/FallingSandsSumoSimulation.vcxproj.filters
+++ b/FallingSandsSumoSimulation.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClInclude Include="cppFallingSands-master\src\Utility\FastNoiseLite.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SubChunkBoundingBox.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SDL2 Template.rc">
@@ -218,6 +221,9 @@
       <Filter>Source Files\Utility</Filter>
     </ClCompile>
     <ClCompile Include="cppFallingSands-master\src\Utility\Velocity.cpp">
+      <Filter>Source Files\Utility</Filter>
+    </ClCompile>
+    <ClCompile Include="SubChunkBoundingBox.cpp">
       <Filter>Source Files\Utility</Filter>
     </ClCompile>
   </ItemGroup>
