--- a/FallingSandsSumoSimulation.vcxproj.filters
+++ b/FallingSandsSumoSimulation.vcxproj.filters
@@ -111,9 +111,6 @@
     <ClInclude Include="cppFallingSands-master\src\Utility\ProceduralTerrainGen.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="cppFallingSands-master\src\Utility\ThreadPool.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="cppFallingSands-master\src\Utility\Velocity.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -121,6 +118,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SubChunkBoundingBox.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ThreadPool.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
