Changed vector store of world to 2D Array of pointers, removing chunks = opperator and updated code referencing Vector<vecotor<Pixel*>> to 2d Array Only rendering if dirty rect is dirty-> optimization MOved global variables not needed for arrays to seperate cpp file

--- a/FallingSandsSumoSimulation.vcxproj
+++ b/FallingSandsSumoSimulation.vcxproj
@@ -201,6 +201,7 @@
     <ClCompile Include="cppFallingSands-master\src\Textures\Sprite.cpp" />
     <ClCompile Include="cppFallingSands-master\src\Textures\SpriteAnimation.cpp" />
     <ClCompile Include="cppFallingSands-master\src\Textures\SpriteSheet.cpp" />
+    <ClCompile Include="cppFallingSands-master\src\Utility\GlobalVariables.cpp" />
     <ClCompile Include="cppFallingSands-master\src\Utility\ProceduralTerrainGen.cpp" />
     <ClCompile Include="cppFallingSands-master\src\Utility\Velocity.cpp" />
     <ClCompile Include="SubChunkBoundingBox.cpp" />
