--- a/FallingSandsSumoSimulation.vcxproj
+++ b/FallingSandsSumoSimulation.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="cppFallingSands-master\src\Algorithm\MarchingSquares.hpp" />
     <ClInclude Include="cppFallingSands-master\src\Elements\BaseElements\Gas.hpp" />
     <ClInclude Include="cppFallingSands-master\src\Elements\BaseElements\Liquid.hpp" />
     <ClInclude Include="cppFallingSands-master\src\Elements\BaseElements\Moveable.hpp" />
@@ -177,6 +178,7 @@
     <Image Include="cppFallingSands-master\Sprites\AnimationSheet_Character.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cppFallingSands-master\src\Algorithm\MarchingSquares.cpp" />
     <ClCompile Include="cppFallingSands-master\src\Elements\BaseElements\Gas.cpp" />
     <ClCompile Include="cppFallingSands-master\src\Elements\BaseElements\Liquid.cpp" />
     <ClCompile Include="cppFallingSands-master\src\Elements\BaseElements\Moveable.cpp" />
