--- a/FallingSandsSumoSimulation.vcxproj.filters
+++ b/FallingSandsSumoSimulation.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClInclude Include="ThreadPool.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cppFallingSands-master\src\Algorithm\MarchingSquares.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SDL2 Template.rc">
@@ -227,6 +230,9 @@
       <Filter>Source Files\Utility</Filter>
     </ClCompile>
     <ClCompile Include="cppFallingSands-master\src\Utility\GlobalVariables.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cppFallingSands-master\src\Algorithm\MarchingSquares.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
