--- a/FallingSandsSumoSimulation.vcxproj.filters
+++ b/FallingSandsSumoSimulation.vcxproj.filters
@@ -235,5 +235,8 @@
     <ClCompile Include="cppFallingSands-master\src\Algorithm\MarchingSquares.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cppFallingSands-master\src\Algorithm\DouglasPeucker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
