--- a/FallingSandsSumoSimulation.vcxproj
+++ b/FallingSandsSumoSimulation.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="cppFallingSands-master\src\Utility\GlobalVariables.hpp" />
     <ClInclude Include="cppFallingSands-master\src\Utility\ProceduralTerrainGen.hpp" />
     <ClInclude Include="cppFallingSands-master\src\Utility\Velocity.hpp" />
+    <ClInclude Include="cppFallingSands-master\src\Algorithm\Douglas.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SubChunkBoundingBox.hpp" />
     <ClInclude Include="ThreadPool.hpp" />
@@ -182,7 +183,6 @@
     <Image Include="cppFallingSands-master\Sprites\AnimationSheet_Character.png" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="cppFallingSands-master\src\Algorithm\DouglasPeucker.cpp" />
     <ClCompile Include="cppFallingSands-master\src\Algorithm\MarchingSquares.cpp" />
     <ClCompile Include="cppFallingSands-master\src\Elements\BaseElements\Gas.cpp" />
     <ClCompile Include="cppFallingSands-master\src\Elements\BaseElements\Liquid.cpp" />
@@ -211,6 +211,7 @@
     <ClCompile Include="cppFallingSands-master\src\Utility\GlobalVariables.cpp" />
     <ClCompile Include="cppFallingSands-master\src\Utility\ProceduralTerrainGen.cpp" />
     <ClCompile Include="cppFallingSands-master\src\Utility\Velocity.cpp" />
+    <ClCompile Include="cppFallingSands-master\src\Algorithm\Douglas.cpp" />
     <ClCompile Include="SubChunkBoundingBox.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
