--- a/FallingSandsSumoSimulation.vcxproj.filters
+++ b/FallingSandsSumoSimulation.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClInclude Include="cppFallingSands-master\src\Algorithm\Douglas.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="triangulate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SDL2 Template.rc">
@@ -240,6 +243,9 @@
     </ClCompile>
     <ClCompile Include="cppFallingSands-master\src\Algorithm\Douglas.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="triangulate.cpp">
+      <Filter>Source Files\Utility</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
