--- a/FallingSandsSumoSimulation.vcxproj
+++ b/FallingSandsSumoSimulation.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="SubChunkBoundingBox.hpp" />
     <ClInclude Include="ThreadPool.hpp" />
     <ClInclude Include="triangulate.h" />
+    <ClInclude Include="WorldManager.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SDL2 Template.rc" />
@@ -215,6 +216,7 @@
     <ClCompile Include="cppFallingSands-master\src\Algorithm\Douglas.cpp" />
     <ClCompile Include="SubChunkBoundingBox.cpp" />
     <ClCompile Include="triangulate.cpp" />
+    <ClCompile Include="WorldManager.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
